manifests/media/media-config/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: base-media
  namespace: media
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - fromEndpoints:
        - matchLabels:
            app: homeassist
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
